--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,1 @@
-project(mediamanager)
-add_executable(mediamanager mediamanager.cpp library.cpp catalog.cpp collection.cpp)
+add_subdirectory(mediamanager)
