Restore CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_subdirectory(mediamanager)
+project(mediamanager)
+add_executable(mediamanager mediamanager.cpp library.cpp catalog.cpp collection.cpp)
